--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -27,7 +27,7 @@
                 margin: 5px;
                 padding: 10px 25px;
                 box-shadow: 0 0 16px rgba(0,0,0,0.1);
-                background-color: darken(#e5d2df, 3);
+                background-color: darken(#660a00, 3);
             }
         }
     }
