modify banner colors

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,6 @@
 .header-wrapper {
     padding: 10px 20px;
-    background-color: #660a00;
+    background-color: #E25822;
     width: 100%;
     margin: 0 auto;
 }
