--- a/src/scss/_mint_box.scss
+++ b/src/scss/_mint_box.scss
@@ -19,14 +19,14 @@
             font-size: 1.5em;
             color: white;
             padding: 20px 40px;
-            background-color: #4753d6;
+            background-color: #E25822;
             width: 250px;
             max-width: 100%;
             text-align: center;
             border: none;
 
             &:hover {
-                background-color: darken(#4753d6, 20);
+                background-color: darken(#e25822af, 20);
             }
 
             div {
@@ -118,7 +118,7 @@
         $border: $border-width solid $border-color;
         $border-radius: 5px;
 
-        $background-color: lighten(#4753d6, 20);
+        $background-color: lighten(grey, 20);
         $shadow: 0px 0px 6px #C2C2C2;
         //
 
