--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,7 @@
 .header-wrapper {
     padding: 10px 20px;
-    background-color: #e25822af;
+    background-color: #34FBEB;
+    color: #000000;
     width: 100%;
     margin: 0 auto;
 }
