--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -27,7 +27,8 @@
                 margin: 5px;
                 padding: 10px 25px;
                 box-shadow: 0 0 16px rgba(0,0,0,0.1);
-                background-color: darken(#e25822af, 3);
+                background-color: darken(#0000005b, 3);
+                color: #ffffff;
             }
         }
     }
