--- a/src/scss/_mint_box.scss
+++ b/src/scss/_mint_box.scss
@@ -19,14 +19,14 @@
             font-size: 1.5em;
             color: white;
             padding: 20px 40px;
-            background-color: #E25822;
+            background-color: #193BE2;
             width: 250px;
             max-width: 100%;
             text-align: center;
             border: none;
 
             &:hover {
-                background-color: darken(#e25822af, 20);
+                background-color: darken(rgb(192, 192, 192), 20);
             }
 
             div {
@@ -43,14 +43,14 @@
             font-size: 1em;
             color: white;
             padding: 10px 20px;
-            background-color: grey;
+            background-color: #27bdb0;
             width: 250px;
             max-width: 100%;
             text-align: center;
             border: none;
 
             &:hover {
-                background-color: darken(grey, 20);
+                background-color: darken(rgb(192, 192, 192), 20);
             }
         }
         .opensea-btn {
@@ -67,7 +67,7 @@
             border: none;
 
             &:hover {
-                background-color: lighten(grey, 20);
+                background-color: lighten(rgb(192, 192, 192), 20);
             }
         }
 
@@ -118,7 +118,7 @@
         $border: $border-width solid $border-color;
         $border-radius: 5px;
 
-        $background-color: lighten(grey, 20);
+        $background-color: lighten(rgb(192, 192, 192), 20);
         $shadow: 0px 0px 6px #C2C2C2;
         //
 
