--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     padding: 20px;
     color: black;
-    background-color: #e25822af;
+    background-color: #34FBEB;
 
     .row {
         display: flex;
