changes to content

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,5 +1,11 @@
 p {
     margin-bottom: 10px;
+    font-family: 'M PLUS 1 Code', sans-serif;
+}
+
+h1 {
+    font-family: 'VT323', monospace;
+    font-size:2.4em;
 }
 
 .content {
