--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -9,6 +9,21 @@
     background-repeat: no-repeat;
     clip-path: polygon(0 0,100% 0,100% 88%,50% 100%,0 88%);
 
+
+    /* ---- Start Responsive Hero Layout ---- */
+
+    @media only screen and (max-width: 1360px) {
+        .hero {
+          height:auto;
+          min-height:350px;
+          max-height: inherit;
+            }
+         }
+    
+    /* ---- End Responsive Hero Layout ---- */
+    
+    
+
     .hero-text {
         max-width: 100%;
         width: auto;
